saco el contador del home

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="col-lg-6 order-lg-2 d-flex position-relative">
                   <img class="img-fluid ms-auto mx-auto me-lg-8" src="./assets/img/oc1.png" srcset="./assets/img/photos/oc.png 2x" alt="" data-cue="fadeIn">
                   <div data-cue="slideInRight" data-delay="300">
-                    <div class="card shadow-lg position-absolute" style="bottom: 10%; right: -3%;">
+                    <!--<div class="card shadow-lg position-absolute" style="bottom: 10%; right: -3%;">
                       <div class="card-body py-4 px-5">
                         <div class="d-flex flex-row align-items-center">
                           <div>
@@ -83,7 +83,7 @@
                             <p class="fs-14 lh-sm mb-0 text-nowrap">Happy Clients</p>
                           </div>
                         </div>
-                      </div>
+                      </div>-->
                       <!--/.card-body -->
                     </div>
                     <!--/.card -->
