--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <div data-cue="slideInRight" data-delay="300">
                     <div class="card shadow-lg position-absolute" style="bottom: 10%; right: -3%;">
                       <div class="card-body py-4 px-5">
-                        <!--<div class="d-flex flex-row align-items-center">
+                        <div class="d-flex flex-row align-items-center">
                           <div>
                             <div class="icon btn btn-circle btn-md btn-soft-primary disabled mx-auto me-3"> <i class="uil uil-users-alt"></i> </div>
                           </div>
@@ -83,7 +83,7 @@
                             <p class="fs-14 lh-sm mb-0 text-nowrap">Happy Clients</p>
                           </div>
                         </div>
-                      </div>->
+                      </div>
                       <!--/.card-body -->
                     </div>
                     <!--/.card -->
