--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
                   <img class="img-fluid ms-auto mx-auto me-lg-8" src="./assets/img/oc1.png" srcset="./assets/img/photos/oc.png 2x" alt="" data-cue="fadeIn">
                 </div>
                 <!--/column -->
+                <div class="col-lg-6 text-center text-lg-start" data-cues="slideInDown" data-group="page-title" data-delay="600">
+                  <h1 class="display-2 mb-5">Taking Care.</h1>
+                  <p class="lead fs-lg lh-sm mb-7 pe-xl-10">Quatcon is a multinational Company focused in opening and developing markets in LATAM for healthcare products &
+                    technology.</p>
+                  <div class="d-flex justify-content-center justify-content-lg-start" data-cues="slideInDown" data-group="page-title-buttons" data-delay="900">
+                    <span><a href="#" class="btn btn-lg btn-primary rounded-pill me-2">Explore Now</a></span>
+                    <span><a href="#" class="btn btn-lg btn-outline-primary rounded-pill">Contact Us</a></span>
+                  </div>
+                </div>
+                <!--/column -->
               </div>
               <!--/.row -->
             </div>
