--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       <!-- /header -->
 
       <!-- HOME -->
-      <section class="wrapper bg-light">  
+      <section class="wrapper bg-light"> 
+        <video autoplay muted loop id="myVideo">
+          <source src="./assets/mp4/landing_loop.mp4" type="video/mp4">
+        </video> 
+        
         <div class="container">
           <div class="card bg-soft-primary rounded-4 mt-2 mb-13 mb-md-17">
-
-            <video autoplay muted loop id="myVideo">
-              <source src="./assets/mp4/landing_loop.mp4" type="video/mp4">
-            </video>
 
             <div class="card-body p-md-10 py-xl-11 px-xl-15">
               <div class="row gx-lg-8 gx-xl-0 gy-10 align-items-center">
@@ -94,7 +94,8 @@
             <!--/.card-body -->
           </div>
           <!--/.card -->
-          
+
+
           <!-- WHO ARE WE -->
           <section class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-18 align-items-center" id="about">
             <div class="col-md-8 col-lg-6 position-relative">
@@ -210,10 +211,12 @@
             <div class="container py-14 py-md-16">
               <h2 class="fs-15 text-uppercase text-muted text-center mb-8">OUR CLIENTS</h2>
               <div class="carousel owl-carousel clients mb-0" data-margin="30" data-loop="true" data-dots="false" data-autoplay="true" data-autoplay-timeout="3000" data-responsive='{"0":{"items": "2"}, "768":{"items": "4"}, "992":{"items": "5"}, "1200":{"items": "6"}, "1400":{"items": "7"}}'>
-                <div class="item px-5"><img src="./assets/img/brands/c1.png" alt="" /></div>
-                <div class="item px-5"><img src="./assets/img/brands/c2.png" alt="" /></div>
-                <div class="item px-5"><img src="./assets/img/brands/c3.png" alt="" /></div>
-                <div class="item px-5"><img src="./assets/img/brands/c4.png" alt="" /></div>
+                <div class="item px-1"><img src="./assets/img/brands/l1.png" alt="" /></div>
+                <div class="item px-1"><img src="./assets/img/brands/l2.png" alt="" /></div>
+                <div class="item px-1"><img src="./assets/img/brands/l3.png" alt="" /></div>
+                <div class="item px-1"><img src="./assets/img/brands/l4.png" alt="" /></div>
+                <div class="item px-1"><img src="./assets/img/brands/l5.png" alt="" /></div>
+                <div class="item px-1"><img src="./assets/img/brands/l6.png" alt="" /></div>
               </div>
               <!-- /.owl-carousel -->
             </div>
@@ -294,7 +297,7 @@
             <div class="col-lg-4">
               <div class="widget">
                 <img class="mb-4" src="./assets/img/logo-dark.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="" />
-                <p class="lead mb-0">We are trusted by over 5000+ clients. Join them by using our services and grow your business.</p>
+                <p class="lead mb-0">Let's make something great together.</p>
               </div>
               <!-- /.widget -->
             </div>
