--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="content-wrapper">
       <header class="wrapper bg-light pt-1">
-        <nav class="navbar navbar-expand-lg center-nav transparent navbar-light">
+        <nav class="navbar navbar-expand-lg center-nav navbar-light navbar-bg-light">
           <div class="container flex-lg-row flex-nowrap align-items-center">
             <div class="navbar-brand w-100">
               <a href="./index.html">
