--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             </div>
                             <div class="align-self-start justify-content-start">
                               <h5 class="mb-1">Address</h5>
-                              <address>Av. Santa Fe 955. 2nd floor “A”, 
+                              <address>Av. Santa Fe 955, 
                                 Ciudad de Buenos Aires, Argentina</address>
                             </div>
                           </div>
@@ -331,7 +331,7 @@
                   </div>
                   <div class="align-self-start justify-content-start">
                     <h5 class="mb-1">Address</h5>
-                    <address>Av. Santa Fe 955. 2nd floor “A”, 
+                    <address>Av. Santa Fe 955, 
                       Ciudad de Buenos Aires, Argentina</address>
                   </div>
                 </div>
