--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             </div>
                             <div>
                               <h5 class="mb-1">E-mail</h5>
-                              <p class="mb-0"><a href="mailto:sandbox@email.com" class="link-body">contact@quatcon.com</a></p>
+                              <p class="mb-0"><a href="mailto:sales@quatcon.com" class="link-body">sales@quatcon.com</a></p>
                             </div>
                           </div>
                           <!--/div -->
@@ -347,9 +347,9 @@
           <div class="d-md-flex align-items-center justify-content-between">
             <p class="mb-2 mb-lg-0">© 2021 Quatcon. All rights reserved.</p>
             <nav class="nav social social-muted mb-0 text-md-end">
-              <a href="#"><i class="uil uil-twitter"></i></a>
+              <!-- <a href="#"><i class="uil uil-twitter"></i></a>
               <a href="#"><i class="uil uil-facebook-f"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
+              <a href="#"><i class="uil uil-instagram"></i></a> -->
             </nav>
             <!-- /.social -->
           </div>
