--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   </ul>
                 </li>
                 <li class="nav-item d-none d-md-block">
-                  <a href="#contact" class="btn btn-sm btn-primary rounded-pill">Contact</a>
+                  <a href="mailto:sales@quatcon.com" class="btn btn-sm btn-primary rounded-pill">Contact</a>
                 </li>
                 <li class="nav-item d-lg-none">
                   <div class="navbar-hamburger"><button class="hamburger animate plain" data-toggle="offcanvas-nav"><span></span></button></div>
