find us spelling

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <div class="row text-center">
                 <div class="col-lg-9 mx-auto">
                   <h2 class="fs-15 text-uppercase text-muted mb-3 mt-12">FIND US</h2>
-                  <h3 class="display-4 mb-0 text-center px-xl-10 px-xxl-15">Quatcon have presence in nine different countries, and operations in ten cities.</h3>
+                  <h3 class="display-4 mb-0 text-center px-xl-10 px-xxl-15">Quatcon has presence in nine different countries, and operations in ten cities.</h3>
                 </div>
                 <!-- /column -->
               </div>
